# claude_task_manager

./: .env.example  .gitignore  BESCHREIBUNG.md  DESCRIPTION.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/core/: context_processors.py
apps/dashboard/: urls.py  views.py
apps/projects/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py
apps/projects/services/: repo_reader.py  suggestion_service.py
apps/providers/: admin.py  base.py  forms.py  models.py  urls.py  views.py
apps/scheduling/: admin.py  celery_tasks.py  forms.py  models.py  urls.py  views.py
apps/tasks/: admin.py  api_urls.py  api_views.py  celery_tasks.py  consumers.py  forms.py  models.py  routing.py  serializers.py  urls.py  views.py
celery_app/: app.py  beat_schedule.py
config/: asgi.py  urls.py
config/settings/: base.py  development.py
static/js/: app.js  kanban.js
templates/: 404.html  500.html  base.html
templates/components/: kanban_column.html  live_output.html  task_card.html  token_budget_bar.html
templates/dashboard/: index.html
templates/projects/: create.html  detail.html  edit.html  list.html
templates/providers/: _form.html  create.html  edit.html  list.html
templates/scheduling/: budget.html  budget_form.html  settings.html
templates/tasks/: create.html  detail.html  list.html
tests/: conftest.py  test_api.py  test_celery_tasks.py  test_management_commands.py  test_models.py  test_providers.py  test_scheduling.py  test_views.py
(+33 files in other folders)
